# ApplicationsWaveTool

./: .gitignore  License  NOTICE  README.md
M4_Eval_SDK/: README.md  sdk_Linux_M4.rar  sdk_M4.rar
M4_Eval_SDK/Source/: .gitignore  .gitmodules  CMakeLists.txt  README.md
M4_Eval_SDK/Source/cmake/: GetGitRevisionDescription.cmake  git_version.cpp.in
M4_Eval_SDK/Source/doc/src/: building.md.in  doxygen_base_cfg.Doxyfile  known_issues.md.in  mainpage.md.in  readme.md  samples.md.in
M4_Eval_SDK/Source/doc/src/doxygen_internal/: footer.html.in
M4_Eval_SDK/Source/inc/: ad5940_application.hpp  ad7689_application.hpp  adpd4000_application.hpp  adpd_application.hpp  adxl_application.hpp  bcm_application.hpp  blocking_queue.hpp  callback.hpp  ecg_application.hpp  eda_application.hpp  fs_application.hpp  led_application.hpp  m2m2_application.hpp  m2m2_data_stream.hpp  pm_application.hpp  ppg_application.hpp  ps_application.hpp  sdk_err.hpp  watch.hpp
M4_Eval_SDK/Source/inc/m2m2/: .gitignore
M4_Eval_SDK/Source/inc/m2m2/cpp/: ad7689_application_interface.hpp  bcm_application_interface.hpp  common_application_interface.hpp  ecg_application_interface.hpp  eda_application_interface.hpp  file_system_interface.hpp  m2m2_core.hpp  pedometer_application_interface.hpp  pm_application_interface.hpp  ppg_application_interface.hpp  ps_application_interface.hpp  sensor_ad5940_application_interface.hpp  sensor_adpd_application_interface.hpp  sensor_adxl_application_interface.hpp
M4_Eval_SDK/Source/inc/m2m2/master_definitions/: ecg_application_interface.py  file_system_interface.py  pm_application_interface.py  ps_application_interface.py  sync_data_application_interface.py
M4_Eval_SDK/Source/samples/python/: 0110347A.m2m2  CLI.py  console_window.py  simple_example.py
M4_Eval_SDK/Source/samples/python/jupiterNotebook/: ECG View.ipynb  EDA View.ipynb  PPG View.ipynb  Smoke_View.ipynb  adpd4000_Interrupt.ipynb  adpd_4000.ipynb
M4_Eval_SDK/Source/samples/python/jupiterNotebook/config/: ADPD188BIZ-SK_Smoke_OpenAir_01.dcfg  ADPD4000_defaultA.DCFG  ADPD4100.dcfg
M4_Eval_SDK/Source/samples/windows/CPP/: CPPSample.sln
M4_Eval_SDK/Source/samples/windows/CPP/CPPSample/: CPPSample.cpp  CPPSample.vcxproj  CPPSample.vcxproj.filters
M4_Eval_SDK/Source/samples/windows/CPP/CPPSample/include/serial/: serial.h
M4_Eval_SDK/Source/samples/windows/CPP/CPPSample/include/serial/impl/: win.h
M4_Eval_SDK/Source/src/: ad5940_application.cpp  ad7689_application.cpp  adpd4000_application.cpp  adpd_application.cpp  adxl_application.cpp  bcm_application.cpp  callback.cpp  ecg_application.cpp  eda_application.cpp  fs_application.cpp  led_application.cpp  m2m2_application.cpp  pm_application.cpp  ppg_application.cpp  ps_application.cpp  syncppg_application.cpp  watch.cpp
M4_Eval_SDK/Source/src/swig/: gen3_sdk.i  gen3_sdk_cs.i
StudyWatch_SDK_healthwearableApp/: README.md
StudyWatch_SDK_healthwearableApp/Source/: .gitignore  README.md  pubspec.yaml
StudyWatch_SDK_healthwearableApp/Source/android/: CMakeLists.txt
StudyWatch_SDK_healthwearableApp/Source/android/app/: build.gradle
StudyWatch_SDK_healthwearableApp/Source/android/app/src/main/: AndroidManifest.xml
StudyWatch_SDK_healthwearableApp/Source/android/app/src/main/kotlin/com/example/vsm/: MainActivity.kt
StudyWatch_SDK_healthwearableApp/Source/android/app/src/profile/: AndroidManifest.xml
StudyWatch_SDK_healthwearableApp/Source/flutterClasses/header/: CPPtoC_Wrapper.h  dart_api_dl.h
StudyWatch_SDK_healthwearableApp/Source/flutterClasses/source/: CPPtoC_Wrapper.cpp  dart_api_dl.c
StudyWatch_SDK_healthwearableApp/Source/ios/Runner/: Info.plist
StudyWatch_SDK_healthwearableApp/Source/ios/Runner.xcodeproj/: project.pbxproj
StudyWatch_SDK_healthwearableApp/Source/lib/: main.dart
StudyWatch_SDK_healthwearableApp/Source/lib/services/: service_locator.dart
StudyWatch_SDK_healthwearableApp/Source/sdk/inc/: adpd4000_application.hpp  adxl_application.hpp  blocking_queue.hpp  callback.hpp  display_application.hpp  ecg_application.hpp  eda_application.hpp  fs_application.hpp  m2m2_application.hpp  m2m2_data_stream.hpp  pm_application.hpp  temperature_application.hpp  watch.hpp
StudyWatch_SDK_healthwearableApp/Source/sdk/src/: adpd4000_application.cpp  adxl_application.cpp  bcm_application.cpp  callback.cpp  display_application.cpp  ecg_application.cpp  eda_application.cpp  fs_application.cpp  git_version.cpp  m2m2_application.cpp  main.cpp  pedometer_application.cpp  pm_application.cpp  ppg_application.cpp  sqi_application.cpp  temperature_application.cpp  watch.cpp
StudyWatch_SDK_healthwearableApp/Source/test/: widget_test.dart
Wavetool_UDP/: README.md
Wavetool_UDP/LabView/VIs/: AwtTransferModule.vi
Wavetool_UDP/MATLAB/: awt_modules.h  awt_udp_parser.m
Wavetool_UDP/Python/: Sample.py  awt_module.py  example.py  example1.py  example188.py  example_controller.py
Wavetool_UDP/Python/DataParser/: GraphDataParser.py  M2M2DataParserManager.py
ios_sdk/: GettingStartedWithiOS_Framework.docx
ios_sdk/doc/doxygen/html/: ad7156__application_8cpp.html  ad7156__application_8hpp.html  ad7156__application_8hpp_source.html  adpd4000__application_8cpp.html  adpd4000__application_8cpp.js  adpd4000__application_8hpp.html  adpd4000__application_8hpp_source.html  adxl__application_8cpp.html  adxl__application_8hpp.html  adxl__application_8hpp_source.html  annotated.html  annotated_dup.js  bcm__application_8cpp.html  bcm__application_8hpp.html  bcm__application_8hpp_source.html  bia__application_8cpp.html  bia__application_8hpp.html  bia__application_8hpp_source.html  blocking__queue_8hpp.html  blocking__queue_8hpp_source.html  building_8md.html  byte__swap_8hpp.html  byte__swap_8hpp.js  byte__swap_8hpp_source.html  callback_8cpp.html  callback_8hpp.html  callback_8hpp.js  callback_8hpp_source.html  classad7156__application-members.html  classad7156__application.html  classad7156__application.js  classadpd4000__application.html  (+408 more)
ios_sdk/samples/ios/: gen4sdkBLE.h  gen4sdkBLE.m  gen4sdkWrapper.h  gen4sdkWrapper.mm  iosSDKSample-Bridging-Header.h
(+193 files in other folders)
